[package]
name = "russx"
version = "0.3.4"
description = "A rust template library"
documentation = "https://docs.rs/russx"
keywords = ["markup", "template", "html", "rsx"]
categories = ["template-engine"]
homepage = "https://github.com/PizzasBear/russx"
repository = "https://github.com/PizzasBear/russx"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[dependencies]
russx_macros = { version = "0.3.4", path = "../russx_macros" }
typed-builder = "0.18"
askama_escape = "0.10"
thiserror = "1.0"

axum-core = { version = "0.4", optional = true }
http = { version = "1.0", optional = true }
actix-web = { version = "4", default-features = false, optional = true }
hyper = { version = "1.0", default-features = false, optional = true }
warp = { version = "0.3", default-features = false, optional = true }
tide = { version = "0.16", default-features = false, optional = true }
gotham = { version = "0.7", default-features = false, optional = true }
rocket = { version = "0.5.0", default-features = false, optional = true }

[features]
default = []
axum = ["dep:axum-core", "dep:http", "russx_macros/axum"]
actix-web = ["dep:actix-web", "russx_macros/actix-web"]
hyper = ["dep:hyper", "russx_macros/hyper"]
warp = ["dep:warp", "russx_macros/warp"]
tide = ["dep:tide", "russx_macros/tide"]
gotham = ["dep:gotham", "russx_macros/gotham"]
rocket = ["dep:rocket", "russx_macros/rocket"]
